chore: tweak hero css to be reusable

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <main id="main-content">
         <!-- ====== Hero Section ====== -->
-        <section class="hero" aria-label="Hero section">
+        <section class="hero hero-home" aria-label="Hero section">
             <div class="wrapper">
                 <div class="slogan" aria-label="Slogan">
                     <h1>Welcome to datsforge!</h1>
@@ -108,27 +108,27 @@
                 <!-- Decorative animated backgrounds -->
                 <div class="fireflies" aria-hidden="true"></div>
                 <div class="falling-leaves" aria-hidden="true"></div>
-                <!-- Contact & Social Links -->
-                <div class="contact-info" aria-label="Contact Information">
-                    <button id="theme-toggle" class="icon-button animate-button" aria-label="Toggle theme"
-                        type="button">
-                        <svg class="icon theme-icon" width="24" height="24" aria-hidden="true">
-                            <use href="#dark_mode_icon"></use>
-                        </svg>
-                    </button>
-                    <a href="https://github.com/datsforge/datsforge" class="icon-button animate-button"
-                        aria-label="Visit datsforge on GitHub" target="_blank" rel="noopener noreferrer">
-                        <svg class="icon" aria-hidden="true">
-                            <use href="#github_icon"></use>
-                        </svg>
-                    </a>
-                    <a href="mailto:contact@datsforge.com" class="icon-button animate-button"
-                        aria-label="Email contact@datsforge.com">
-                        <svg class="icon" aria-hidden="true">
-                            <use href="#mail_icon"></use>
-                        </svg>
-                    </a>
-                </div>
+
+            </div>
+            <!-- Contact & Social Links -->
+            <div class="contact-info" aria-label="Contact Information">
+                <button id="theme-toggle" class="icon-button animate-button" aria-label="Toggle theme" type="button">
+                    <svg class="icon theme-icon" width="24" height="24" aria-hidden="true">
+                        <use href="#dark_mode_icon"></use>
+                    </svg>
+                </button>
+                <a href="https://github.com/datsforge/datsforge" class="icon-button animate-button"
+                    aria-label="Visit datsforge on GitHub" target="_blank" rel="noopener noreferrer">
+                    <svg class="icon" aria-hidden="true">
+                        <use href="#github_icon"></use>
+                    </svg>
+                </a>
+                <a href="mailto:contact@datsforge.com" class="icon-button animate-button"
+                    aria-label="Email contact@datsforge.com">
+                    <svg class="icon" aria-hidden="true">
+                        <use href="#mail_icon"></use>
+                    </svg>
+                </a>
             </div>
             <div class="hero-deco-bar" aria-hidden="true"></div>
         </section>
@@ -354,7 +354,7 @@
                             </div>
                         </form>
                     </div>
-                    
+
                 </div>
             </div>
         </section>
