--- a/assets/html/promo/free-promo.html
+++ b/assets/html/promo/free-promo.html
@@ -88,7 +88,7 @@
     </header>
     <main>
         <!-- ====== Hero Section ====== -->
-        <section class="hero" aria-label="Hero section">
+        <section class="hero hero-free-promo" aria-label="Hero section">
             <div class="wrapper">
                 <div class="slogan" aria-label="Slogan">
                     <h1>Let’s Forge Something Real</h1>
@@ -98,30 +98,32 @@
                         All I ask? Your honesty and a solid testimonial.
                     </p>
                 </div>
+                <a class="textbutton filled" href="#project-req-form">
+                      Request A Project
+                </a>
                 <!-- Decorative animated backgrounds -->
                 <div class="fireflies" aria-hidden="true"></div>
                 <div class="falling-leaves" aria-hidden="true"></div>
-                <!-- Contact & Social Links -->
-                <div class="contact-info" aria-label="Contact Information">
-                    <button id="theme-toggle" class="icon-button animate-button" aria-label="Toggle theme"
-                        type="button">
-                        <svg class="icon theme-icon" width="24" height="24" aria-hidden="true">
-                            <use href="#dark_mode_icon"></use>
-                        </svg>
-                    </button>
-                    <a href="https://github.com/datsforge/datsforge" class="icon-button animate-button"
-                        aria-label="Visit datsforge on GitHub" target="_blank" rel="noopener noreferrer">
-                        <svg class="icon" aria-hidden="true">
-                            <use href="#github_icon"></use>
-                        </svg>
-                    </a>
-                    <a href="mailto:contact@datsforge.com" class="icon-button animate-button"
-                        aria-label="Email contact@datsforge.com">
-                        <svg class="icon" aria-hidden="true">
-                            <use href="#mail_icon"></use>
-                        </svg>
-                    </a>
-                </div>
+            </div>
+            <!-- Contact & Social Links -->
+            <div class="contact-info" aria-label="Contact Information">
+                <button id="theme-toggle" class="icon-button animate-button" aria-label="Toggle theme" type="button">
+                    <svg class="icon theme-icon" width="24" height="24" aria-hidden="true">
+                        <use href="#dark_mode_icon"></use>
+                    </svg>
+                </button>
+                <a href="https://github.com/datsforge/datsforge" class="icon-button animate-button"
+                    aria-label="Visit datsforge on GitHub" target="_blank" rel="noopener noreferrer">
+                    <svg class="icon" aria-hidden="true">
+                        <use href="#github_icon"></use>
+                    </svg>
+                </a>
+                <a href="mailto:contact@datsforge.com" class="icon-button animate-button"
+                    aria-label="Email contact@datsforge.com">
+                    <svg class="icon" aria-hidden="true">
+                        <use href="#mail_icon"></use>
+                    </svg>
+                </a>
             </div>
             <div class="hero-deco-bar" aria-hidden="true"></div>
         </section>
