chore: theme toggle on hero and footer can now be used on same page at once

--- a/assets/html/promo/free-promo.html
+++ b/assets/html/promo/free-promo.html
@@ -267,7 +267,7 @@
                             </div>
                             <div class="form-group">
                                 <input type="text" id="references" name="references" placeholder="" />
-                                <label for="references">Reference Links / Attachments (optional)</label>
+                                <label for="references">Reference Links (optional)</label>
                             </div>
                             <!-- Honeypot field for spam bots -->
                             <div class="honeypot-field" aria-hidden="true">
@@ -293,7 +293,7 @@
     </main>
 
     <!-- ====== Footer ====== -->
-    <footer id="footer-main"></footer>
+    <footer></footer>
 
     <!-- ====== Scroll to Top Floating Button ====== -->
     <button class="fab fab-hide fab-bounce-hover" id="fab-scroll-top" aria-label="Scroll to top">
