--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     </main>
 
     <!-- ====== Footer ====== -->
-    <footer id="footer-main"></footer>
+    <footer></footer>
 
     <!-- ====== Scroll to Top Floating Button ====== -->
     <button class="fab fab-hide fab-bounce-hover" id="fab-scroll-top" aria-label="Scroll to top">
