chore: clean up of phase directories

--- a/assets/html/nav/navbar-f-phase.html
+++ b/assets/html/nav/navbar-f-phase.html
@@ -3,8 +3,8 @@
   Proprietary – See LICENSE for details. 
 -->
 
-<template id="navbar-free-promo">
-    <div class="navbar-free-promo">
+<template id="navbar-f-phase">
+    <div class="navbar-f-phase">
         <a href="/index.html" class="logo">
             <img src="/assets/images/datsforge/icon/datsforge_icon.png"
                 alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
@@ -22,7 +22,6 @@
             <li class="nav-link"><a href="#offer-section">Offer</a></li>
             <li class="nav-link"><a href="#deal-section">Deal</a></li>
             <li class="nav-link"><a href="#form-section">Request a project</a></li>
-            <!-- <li class="nav-link"><a href="/assets/html/about.html">me</a></li> -->
         </ul>
     </div>
 </template>
