feat: added access gate for f-phase home

--- a/assets/html/phase/f-phase/home.html
+++ b/assets/html/phase/f-phase/home.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="/assets/css/components.css">
     <link rel="stylesheet" href="/assets/css/mobile.css">
     <!-- ====== Main App Logic ====== -->
-    <!-- <script src="/assets/js/access-gate.js" defer></script> -->
+    <script src="/assets/js/access-gate.js" defer></script>
     <script src="/assets/js/home-anim.js" defer></script>
     <script src="/assets/js/project-req-form-handler.js" defer></script>
     <script type="module">
@@ -81,7 +81,7 @@
     </script>
 </head>
 
-<body >
+<body class="protected-page">
     <!-- ====== Navigation ====== -->
     <header>
         <nav id="navbar" aria-label="Main Navigation"></nav>
