chore: updated some of the page paragraphs

--- a/assets/html/phase/f-phase/home.html
+++ b/assets/html/phase/f-phase/home.html
@@ -92,10 +92,12 @@
             <div class="wrapper">
                 <div class="slogan" aria-label="Slogan">
                     <h1>Let’s Forge Something Real</h1>
-                    <p aria-hidden="true"> This is the beginning of <strong>datsforge’s Free Phase</strong> — where
-                        passion outweighs price.
-                        I’ll build your idea — a game, app, or site — for free or nearly free.<br>
-                        All I ask? Your honesty and a solid testimonial.
+                    <p aria-hidden="true">
+                        Welcome to the <strong>F‑Phase</strong> of datsforge - where <em>passion outweighs price</em>,
+                        and value is earned, not bought.<br>
+                        I’ll build your idea - a game, app, or site - <strong>for free</strong>. No catch, no
+                        gimmicks.<br>
+                        In return? Just one thing: your <strong>raw honesty</strong> and a solid testimonial.
                     </p>
                 </div>
                 <a class="textbutton filled" href="#project-req-form">
@@ -132,12 +134,11 @@
             <article class="layout-column align-center section-divider" aria-labelledby="intro-section">
                 <h2>The Beginning of Something Bigger…</h2>
                 <p>
-                    At the dawn of a new era for <strong>datsforge</strong>, we open our gates to the world — not to
+                    At the dawn of a new era for <strong>datsforge</strong>, we open our gates to the world - not to
                     sell,
                     but to prove.
-                    This is the <strong>Free Phase</strong> — where real apps, games, and websites are built for
-                    free or
-                    nearly free.
+                    This is the <strong>F-Phase</strong> - where real apps, games, and websites are built for
+                    completely free, If it has a price, it’s because you choose it.
                     You get real results. We get your testimonial. Deal?
                 </p>
             </article>
@@ -199,7 +200,7 @@
                                 <p>
                                     I’m offering this for a <strong>short time</strong>, and only to a small number of
                                     people.
-                                    Once the slots are filled or the <strong>Free Phase</strong> ends - it’s closed.
+                                    Once the slots are filled or the <strong>F-Phase</strong> ends - it’s closed.
                                 </p>
                                 <p>
                                     Got an idea worth building? Fill out the form below.
@@ -281,8 +282,8 @@
                                 <input type="checkbox" id="agree-terms" name="agree-terms" required>
                                 <label for="agree-terms" class="checkbox-label">
                                     <span class="checkbox-text">
-                                        I agree to the <a href="terms.html" target="_blank"
-                                            rel="noopener">terms and conditions</a>
+                                        I agree to the <a href="terms.html" target="_blank" rel="noopener">terms and
+                                            conditions</a>
                                     </span>
                                 </label>
                             </div>
