--- a/assets/html/phase/f-phase/home.html
+++ b/assets/html/phase/f-phase/home.html
@@ -97,7 +97,7 @@
                         and value is earned, not bought.<br>
                         I’ll build your idea - a game, app, or site - <strong>for free</strong>. No catch, no
                         gimmicks.<br>
-                        In return? Just one thing: your <strong>raw honesty</strong> and a solid testimonial.
+                        In return? Just one thing: your raw honesty and a solid testimonial.
                     </p>
                 </div>
                 <a class="textbutton filled" href="#project-req-form">
@@ -138,7 +138,7 @@
                     sell,
                     but to prove.
                     This is the <strong>F-Phase</strong> - where real apps, games, and websites are built for
-                    completely free, If it has a price, it’s because you choose it.
+                    <strong>completely free</strong>, If it has a price, it’s because you choose it.
                     You get real results. We get your testimonial. Deal?
                 </p>
             </article>
@@ -274,6 +274,17 @@
                                 </select>
                                 <label for="source-type">How did you find out datsforge?</label>
                             </div>
+                            
+                            <div class="custom-dropdown" data-name="phase" data-label="Select Phase" >
+                                <div class="dropdown-label">Select Phase</div>
+                                <div class="dropdown-selected">‎</div>
+                                <ul class="dropdown-options">
+                                    <li data-value="f">F‑Phase</li>
+                                    <li data-value="a">Alpha Phase</li>
+                                    <li data-value="b">Beta Phase</li>
+                                </ul>
+                            </div>
+
                             <div class="form-group">
                                 <input type="text" id="references" name="references" placeholder="" />
                                 <label for="references">Reference Links (optional)</label>
@@ -330,6 +341,47 @@
         <span id="error-message"></span>
         <button id="error-dismiss" aria-label="Dismiss error" type="button">&times;</button>
     </div>
+
+    <script>
+  document.querySelectorAll('.md3-dropdown').forEach(dropdown => {
+    const selected = dropdown.querySelector('.dropdown-selected');
+    const options = dropdown.querySelector('.dropdown-options');
+    const label = dropdown.querySelector('.dropdown-label');
+    const name = dropdown.dataset.name || 'dropdown';
+
+    // Create hidden input
+    const input = document.createElement('input');
+    input.type = 'hidden';
+    input.name = name;
+    dropdown.appendChild(input);
+
+    selected.addEventListener('click', () => {
+      dropdown.classList.toggle('open');
+      options.style.display = dropdown.classList.contains('open') ? 'block' : 'none';
+    });
+
+    options.querySelectorAll('li').forEach(option => {
+      option.addEventListener('click', () => {
+        const value = option.dataset.value;
+        const text = option.textContent;
+
+        input.value = value;
+        selected.textContent = text;
+        dropdown.classList.add('filled');
+        dropdown.classList.remove('open');
+        options.style.display = 'none';
+      });
+    });
+
+    document.addEventListener('click', e => {
+      if (!dropdown.contains(e.target)) {
+        dropdown.classList.remove('open');
+        options.style.display = 'none';
+      }
+    });
+  });
+</script>
+
 </body>
 
 </html>
