chore: tweaked field snakbar bahaviour

--- a/assets/html/phase/f-phase/home.html
+++ b/assets/html/phase/f-phase/home.html
@@ -202,7 +202,7 @@
                                 <p>
                                     I’m offering this for a <strong>short time</strong>, and only to a small number of
                                     people.
-                                    Once the slots are filled or the <br><strong>F-Phase</strong> ends - it’s closed.
+                                    Once the slots are filled or the <strong>F-Phase</strong> ends - it’s closed.
                                 </p>
                                 <p>
                                     Got an idea worth building? Fill out the form below.
